2015-08-10 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c: Default method for printing Unicode can be changed with
	  environment variable DOS2UNIX_DISPLAY_ENC.
	* man/man1/dos2unix.pod: Small update on option -D.

2015-08-08 Erwin Waterlander <waterlan@xs4all.nl>
	* man/man1/dos2unix.pod: Small update on option -D. Added tip for recursive
	  conversion in a Windows Command Prompt.

2015-08-06 Erwin Waterlander <waterlan@xs4all.nl>
	* man/man1/dos2unix.pod: Updated section "Unicode file names on Windows"
	  and described new option -D, --display-enc.

2015-08-05 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c: New option -D, --display-encoding, to set the encoding used
	  for the text messages displayed in the Windows console. Possible
	  values are: ansi, unicode, utf8.

2015-08-01 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c: Renamed d2u_printf() to d2u_fprintf().
	* common.c: Fix d2u_fprintf() to work correctly when Native Language
	  Support is enabled.
	* common.c: New function d2u_ansi_fprintf() to redirect also non-Unicode
	  messages to d2u_fprintf(), to have consistent output.
	* *.c: Replace all fprintf() with d2u_fprintf() or d2u_ansi_fprintf().
	* man/man1/dos2unix.pod: Added a new section "Unicode file names on Windows".

2015-07-29 Erwin Waterlander <waterlan@xs4all.nl>
	* INSTALL.txt: Updated with information about Unicode file name
	  support on Windows.
	* po/*.po: Included several translation updates. See README.txt.
	* test/test.bat: Renamed to test/testcmd.bat.
	* test/testps8.ps1: PowerShell script in UTF-8 format using Unicode file names.
	* test/testps16.ps1: PowerShell script in UTF-16 format using Unicode file names.

2015-07-23 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c: glob_warg(): Check for malloc/realloc errors.
	* dos2unix.c, unix2dos.c: Check for malloc errors.

2015-07-20 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c: print_bom(). Fix split message for translators.
