@@ -2,6 +2,8 @@
 	* common.c: Default method for printing Unicode can be changed with
 	  environment variable DOS2UNIX_DISPLAY_ENC.
 	* man/man1/dos2unix.pod: Small update on option -D.
+	* test/testu16.c: Added a small test that demonstrates that redirecting
+	  UTF-16 stdout to a file creates a corrupt UTF-16 file.
 
 2015-08-08 Erwin Waterlander <waterlan@xs4all.nl>
 	* man/man1/dos2unix.pod: Small update on option -D. Added tip for recursive
